--- a/appsettings.json
+++ b/appsettings.json
@@ -13,7 +13,7 @@
   },
   "RetailApi": {
     "PaknSave": {
-      "BaseUrl": " https://api-prod.newworld.co.nz/v1/edge",
+      "BaseUrl": "https://api-prod.newworld.co.nz/v1/edge",
       "Endpoints": {
         "Stores": "/store",
         "Categories": "/store/{storeId}/categories",
@@ -21,11 +21,11 @@
       }
     },
     "NewWorld": {
-      "BaseUrl": "https://api.newworld.co.nz",
+      "BaseUrl": "https://api-prod.newworld.co.nz/v1/edge",
       "Endpoints": {
-        "Stores": "/stores",
-        "Categories": "/categories?storeId={storeId}",
-        "Products": "/products?categoryId={categoryId}"
+        "Stores": "/store",
+        "Categories": "/store/{storeId}/categories",
+        "Products": "search/paginated/products"
       }
     }
   },
